--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <p>This page is designed to be mobile-friendly.</p>
     <img src="your-image.jpg" alt="A Sample Photo">
     <p>Want to chat with us? Click here:</p>
-    <a class="whatsapp-link" href="https://wa.me/YOUR_PHONE_NUMBER?text=Hello%20from%20your%20website" target="_blank">WhatsApp Us</a>
+    <a class="whatsapp-link" href="https://wa.me/972525736072?text=Hello%20from%20your%20website" target="_blank">WhatsApp Us</a>
   </div>
 </body>
 </html>
