--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
     <h1>Hello, Mobile User!</h1>
     <p>This page is designed to be mobile-friendly.</p>
     <img src="your-image.jpg" alt="A Sample Photo">
-    <p>Want to chat with us? Click here:</p>
-    <a class="whatsapp-link" href="https://wa.me/+972525736072" target="_blank">ישר ל-וואצאפ</a>
+    <a class="whatsapp-link" href="https://wa.me/+972525736072" target="_blank">כתבו לי ב-וואצאפ</a>
   </div>
 </body>
 </html>
