--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Hello, Mobile User!</h1>
+    <h1>תגבור במדמ"ח ו-מתמטיקה (4-5 יח"ל בלבד)</h1>
     <p>This page is designed to be mobile-friendly.</p>
     <img src="your-image.jpg" alt="A Sample Photo">
     <a class="whatsapp-link" href="https://wa.me/+972525736072" target="_blank">כתבו לי ב-וואצאפ</a>
