--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
   <div class="container">
     <h1>תגבור במדמ"ח ו-מתמטיקה (4-5 יח"ל בלבד)</h1>
-    <p>This page is designed to be mobile-friendly.</p>
+    <p>שמי דוד אופז, ואני בוגר אונ' ת"א במתמטיקה ומדעי המחשב, עם ניסיון רב בעולם התכנה ובהוראת מתמטיקה.</p>
     <img src="your-image.jpg" alt="A Sample Photo">
     <a class="whatsapp-link" href="https://wa.me/+972525736072" target="_blank">כתבו לי ב-וואצאפ</a>
   </div>
