--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>תגבור במדמ"ח ו-מתמטיקה (4-5 יח"ל בלבד)</h1>
-    <p>שמי דוד אופז, ואני בוגר אונ' ת"א במתמטיקה ומדעי המחשב, עם ניסיון רב בעולם התכנה ובהוראת מתמטיקה.</p>
+    <h2>שיעורים פרטיים במתמטיקה ומדעי המחשב</h2>
+    <p style="text-align: right">שמי דוד אופז, בוגר אונ' ת"א במתמטיקה ומדעי המחשב, עם ניסיון רב בתעשיית התכנה ובהוראת מתמטיקה.</p>
     <img src="your-image.jpg" alt="A Sample Photo">
     <a class="whatsapp-link" href="https://wa.me/+972525736072" target="_blank">כתבו לי ב-וואצאפ</a>
   </div>
