--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mobile-Friendly Page</title>
+  <title>שיעורים פרטיים במתמטיקה</title>
   <style>
     body {
       font-family: sans-serif;
@@ -41,7 +41,7 @@
 <body>
   <div class="container">
     <h2>שיעורים פרטיים במתמטיקה ומדעי המחשב</h2>
-    <p style="text-align: right">שמי דוד אופז, בוגר אונ' ת"א במתמטיקה ומדעי המחשב, עם ניסיון רב בתעשיית התכנה ובהוראת מתמטיקה.</p>
+    <p style="text-align: right">.שמי דוד אופז, בוגר אונ' ת"א במתמטיקה ומדעי המחשב, עם ניסיון רב בתעשיית התכנה ובהוראת מתמטיקה</p>
     <img src="your-image.jpg" alt="A Sample Photo">
     <a class="whatsapp-link" href="https://wa.me/+972525736072" target="_blank">כתבו לי ב-וואצאפ</a>
   </div>
