--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       text-decoration: none;
       border-radius: 5px;
       font-weight: bold;
+       text-align: center;
     }
     .whatsapp-link:hover {
       background-color: #146914; /* Darker Green */
@@ -42,7 +43,7 @@
   <div class="container">
     <h2>שיעורים פרטיים במתמטיקה ומדעי המחשב</h2>
     <p style="text-align: right">.שמי דוד אופז, בוגר אונ' ת"א במתמטיקה ומדעי המחשב, עם ניסיון רב בתעשיית התכנה ובהוראת מתמטיקה</p>
-    <img src="your-image.jpg" alt="A Sample Photo">
+    <img style="text-align: center" src="your-image.jpg" alt="A Sample Photo">
     <a class="whatsapp-link" href="https://wa.me/+972525736072" target="_blank">כתבו לי ב-וואצאפ</a>
   </div>
 </body>
