--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
   <div class="container">
     <h2>שיעורים פרטיים במתמטיקה ומדעי המחשב</h2>
-    <p style="text-align: center">.שמי דוד אופז, בוגר אונ' ת"א במתמטיקה ומדעי המחשב, עם ניסיון רב בתעשיית התכנה ובהוראת מתמטיקה</p>
+    <p styaaale="text-align: center">.שמי דוד אופז, בוגר אונ' ת"א במתמטיקה ומדעי המחשב, עם ניסיון רב בתעשיית התכנה ובהוראת מתמטיקה</p>
     <img style="text-align: center" src="your-image.jpg" alt="A Sample Photo">
     <a class="whatsapp-link" href="https://wa.me/+972525736072" target="_blank">כתבו לי ב-וואצאפ</a>
   </div>
