--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
     .whatsapp-link:hover {
       background-color: #146914; /* Darker Green */
     }
+    .call-link {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #22228B; /* Blue */
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+      text-align: center;
+    }
+    .call-link:hover {
+      background-color: #141469; /* Darker Blue */
+    }
   </style>
 </head>
 <body>
@@ -46,7 +59,8 @@
       .שמי דוד אופז, בוגר אונ' ת"א במתמטיקה ומדעי המחשב, עם ניסיון רב בתעשיית התכנה ובהוראת מתמטיקה
     </p>
     <img src="your-image.jpg" alt="A Sample Photo">
-    <a class="whatsapp-link" href="https://wa.me/+972525736072" target="_blank">כתבו לי ב-ווא1צאפ</a>
+    <a class="whatsapp-link" href="https://wa.me/+972525736072" target="_blank">כתבו לי ב-וואצאפ</a>
+    <a class="call-link" href="tel:+972525736072" target="_blank">דברו איתי</a>
   </div>
 </body>
 </html>
