--- a/index.html
+++ b/index.html
@@ -1,71 +1,3 @@
-``
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>שיעורים פרטיים במתמטיקה</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
-    .container {
-      max-width: 800px;
-      margin: 20px auto;
-      padding: 20px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      background-color: #f9f9f9;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 5px;
-    }
-    .whatsapp-link {
-      display: inline-block;
-      padding: 10px 20px;
-      background-color: #228B22; /* Green */
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      font-weight: bold;
-      text-align: center;
-    }
-    .whatsapp-link:hover {
-      background-color: #146914; /* Darker Green */
-    }
-    .call-link {
-      display: inline-block;
-      padding: 10px 20px;
-      background-color: #22228B; /* Blue */
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      font-weight: bold;
-      text-align: center;
-    }
-    .call-link:hover {
-      background-color: #141469; /* Darker Blue */
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h2>שיעורים פרטיים במתמטיקה ומדעי המחשב</h2>
-    <p>
-      .שמי דוד אופז, בוגר אונ' ת"א במתמטיקה ומדעי המחשב, עם ניסיון רב בתעשיית התכנה ובהוראת מתמטיקה
-    </p>
-    <img src="your-image.jpg" alt="A Sample Photo">
-    <a class="whatsapp-link" href="https://wa.me/+972525736072" target="_blank">כתבו לי ב-וואצאפ</a>
-    <a class="call-link" href="tel:+972525736072" target="_blank">דברו איתי</a>
-  </div>
-</body>
-</html>
-``
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -90,14 +22,10 @@
 <body class="p-4">
     <div class="bg-white p-8 rounded-xl shadow-lg max-w-2xl w-full">
         <h1 class="text-4xl font-extrabold text-gray-900 text-center mb-6 rounded-md p-2 bg-blue-100">
-            Welcome to My Page
+            שיעורים פרטיים במתמטיקה ומדעי המחשב
         </h1>
-
         <p class="text-lg text-gray-700 text-right mb-8 leading-relaxed">
-            This is a sample paragraph demonstrating right alignment. It's designed to showcase how text can be
-            positioned to the right side of its container, providing a different visual flow compared to
-            standard left-aligned or centered text. This can be useful for specific design aesthetics or
-            to draw attention to certain information.
+          .שמי דוד אופז, בוגר אונ' ת"א במתמטיקה ומדעי המחשב, עם ניסיון רב בתעשיית התכנה ובהוראת מתמטיקה
         </p>
 
         <div class="flex justify-center mb-8">
@@ -108,13 +36,13 @@
         </div>
 
         <div class="flex justify-center mb-6">
-            <a href="https://wa.me/1234567890?text=Hello%20there!"
+            <a href="https://wa.me/972525736072"
                target="_blank"
                class="inline-flex items-center px-6 py-3 bg-green-500 text-white font-semibold rounded-full shadow-lg hover:bg-green-600 transition-colors duration-300">
                 <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
                     <path d="M12.04 2C6.58 2 2.13 6.45 2.13 11.91c0 1.72.45 3.38 1.32 4.85L2 22l5.25-1.38c1.47.87 3.13 1.32 4.85 1.32 5.46 0 9.91-4.45 9.91-9.91S17.5 2 12.04 2zm5.37 14.57c-.2-.1-.73-.36-.84-.4c-.11-.04-.2-.06-.29.06-.09.11-.34.4-.42.48-.07.09-.15.1-.28.06-.12-.04-.5-.19-.95-.59-.35-.3-.59-.5-.78-.81-.2-.3-.02-.28.14-.44.15-.15.29-.36.39-.54.1-.18.05-.33-.02-.47-.07-.14-.29-.7-.4-.96-.11-.25-.2-.21-.28-.22-.09-.01-.19-.01-.29-.01-.11 0-.28.04-.42.19-.14.15-.54.53-.66.64-.12.11-.24.15-.45.09-.2-.06-.84-.31-1.6-.98-.59-.51-.98-.9-1.1-.15-.11.75.45 1.46.59 1.66.14.2.28.29.47.37.19.09.38.16.59.22.19.06.38.04.54.02.16-.02.48-.2.52-.39.04-.19.04-.37.02-.4-.02-.02-.2-.1-.5-.24z"/>
                 </svg>
-                Chat on WhatsApp
+               כתבו לי ב-וואצאפ
             </a>
         </div>
 
@@ -124,7 +52,7 @@
                 <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
                     <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.46.57 3.57.11.35.03.74-.24 1.02l-2.2 2.2z"/>
                 </svg>
-                Call Us
+                  דברו איתי
             </a>
         </div>
     </div>
