--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         /* Custom font for a clean look */
         body {
-            font-family: "Inter", sans-serif;
+            fXXXont-family: "Inter", sans-serif;
             background-color: #f0f4f8; /* Light background color */
             min-height: 100vh; /* Ensure body takes full viewport height for consistent centering */
             display: flex;
@@ -25,7 +25,7 @@
             שיעורים פרטיים במתמטיקה ומדעי המחשב
         </h1>
         <p class="text-lg text-gray-700 text-right mb-8 leading-relaxed">
-          .שמי דוד אופז, בוגר אונ' ת"א במתמטיקה ומדעי המחשב, עם ניסיון רב בתעשיית התכנה ובהוראת מתמטיקה
+          שמי דוד אופז, בוגר אונ' ת"א במתמטיקה ומדעי המחשב. עם ניסיון רב בתעשיית התכנה ובהוראת מתמטיקה
         </p>
 
         <div class="flex justify-center mb-8">
