--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
 
         <div class="flex justify-center mb-8">
-            <img src="https://placehold.co/400x250/a78bfa/ffffff?text=Centered+Image"
+            <img src="David.JPG"
                  alt="Placeholder centered image"
                  class="rounded-lg shadow-md w-full max-w-xs md:max-w-md h-auto object-cover border-4 border-purple-300 transform transition-transform duration-300 hover:scale-105"
                  onerror="this.onerror=null;this.src='https://placehold.co/400x250/cccccc/333333?text=Image+Error';">
