--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <div class="flex justify-center mb-8">
             <img src="David.JPG"
                  alt="Placeholder centered image"
-                 class="rounded-lg shadow-md w-full max-w-xs md:max-w-md h-auto object-cover border-4 border-gray-300 transform transition-transform duration-300 hover:scale-105"
+                 cXXlass="rounded-lg shadow-md w-full max-w-xs md:max-w-md h-auto object-cover border-4 border-gray-300 transform transition-transform duration-300 hover:scale-105"
+                 class="rounded-lg shadow-md  md:max-w-md h-auto border-4 border-gray-300 transform transition-transform duration-300 hover:scale-105"
                  onerror="this.onerror=null;this.src='https://placehold.co/400x250/cccccc/333333?text=Image+Error';">
         </div>
 
