--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1 class="text-2xl font-extrabold text-gray-900 text-center mb-6 rounded-md p-2 bg-blue-100">
             שיעורים פרטיים במתמטיקה ומדעי המחשב
         </h1>
-        <p class="text-lg text-gray-700 text-right mb-8 leading-relaxed">
+        <p dir="rtl" class="text-lg text-gray-700 text-right mb-8 leading-relaxed">
           שמי דוד אופז, בוגר אונ' ת"א במתמטיקה ומדעי המחשב. עם ניסיון רב בתוכנה ובהוראת מתמטיקה. והרבה סבלנות!
         </p>
 
