--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
 
         <div class="flex justify-center mb-8">
-            <img src="Me.JPG"
+            <img src="Me.jpg"
                  alt="Placeholder centered image"
                  class="rounded-lg shadow-xl h-auto border-4 border-gray-300 transform transition-transform duration-300 hover:scale-105 mx-auto w-52"
                  onerror="this.onerror=null;this.src='https://placehold.co/400x250/cccccc/333333?text=Image+Error';">
