--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>לומדים מתמטיקה</title>
-    <link rel="icon" type="image/x-icon" href="pi.ico">
+    <link rel="icon" type="image/png" href="pi.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Custom font for a clean look */
@@ -32,7 +32,7 @@
             <img src="Me.jpg"
                  alt="Placeholder centered image"
                  class="rounded-lg shadow-xl h-auto border-4 border-gray-300 transform transition-transform duration-300 hover:scale-105 mx-auto w-52"
-                 onerror="this.onerror=null;this.src='https://placehold.co/400x250/cccccc/333333?text=Image+Error';">
+            >
         </div>
 
         <div class="flex justify-center mb-6">
@@ -54,6 +54,13 @@
                 </svg>
                   דברו איתי
             </a>
+        </div>
+
+        <div class="flex justify-center mb-8">
+            <img src="pi.png"
+                 alt="Placeholder centered image"
+                 class="rounded-lg shadow-xl h-auto border-4 border-gray-300 transform transition-transform duration-300 hover:scale-105 mx-auto w-16"
+            >
         </div>
     </div>
 </body>
