--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="flex justify-center mb-8">
             <img src="Me.jpg"
                  alt="Placeholder centered image"
-                 class="rounded-lg shadow-xl h-auto border-4 border-gray-300 transform transition-transform duration-300 hover:scale-105 mx-auto w-52"
+                 class="rounded-lg shadow-xl h-auto  transform transition-transform duration-300 hover:scale-105 mx-auto w-52"
             >
         </div>
 
