--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="flex justify-center mb-8">
             <img src="Me.jpg"
                  alt="Placeholder centered image"
-                 class=" shadow-xl h-auto  transform transition-transform duration-300 hover:scale-105 mx-auto w-52"
+                 class="h-auto  transform transition-transform duration-300 hover:scale-105 mx-auto w-52"
             >
         </div>
 
@@ -59,7 +59,7 @@
         <div class="flex justify-center mb-8">
             <img src="pi.png"
                  alt="Placeholder centered image"
-                 class="rounded-lg shadow-xl h-auto border-10 border-transparent transform transition-transform duration-300 hover:scale-105 mx-auto w-16"
+                 class="pt-20 h-auto border-10 border-transparent transform transition-transform duration-300 hover:scale-105 mx-auto w-16"
             >
         </div>
     </div>
