--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         /* Custom font for a clean look */
         body {
             background-color: #f0f4f8; /* Light background color */
-            min-height: 80vh; /* Ensure body takes full viewport height for consistent centering */
+            height: 80vh;
+            min-height: 100vh; /* Ensure body takes full viewport height for consistent centering */
             display: flex;
             flex-direction: column;
             align-items: center; /* Center content horizontally */
