--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             שיעורים פרטיים במתמטיקה ומדעי המחשב
         </h1>
         <p dir="rtl" class="text-lg text-gray-700 text-right mb-8 leading-relaxed">
-          שמי דוד אופז, בוגר אונ' ת"א במתמטיקה ומדעי המחשב. עם ניסיון רב בתוכנה ובהוראת מתמטיקה. והמון סבלנות!
+          שמי דוד, בוגר אונ' ת"א במתמטיקה ומדעי המחשב. עם ניסיון רב בתוכנה ובהוראת מתמטיקה. והמון סבלנות!
         </p>
 
         <div class="flex justify-center mb-8">
