--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body class="p-4">
     <div class="bg-white p-8 rounded-xl shadow-lg max-w-2xl w-full">
         <h1 class="text-2xl font-extrabold text-gray-900 text-center mb-6 rounded-md p-2 bg-blue-100">
-            שיעורים פרטיים במתמטיקה ומדעי המחשב
+            תגבור במתמטיקה ומדעי המחשב (4-5 יח"ל בלבד)
         </h1>
         <p dir="rtl" class="text-lg text-gray-700 text-right mb-8 leading-relaxed">
           שמי דוד, בוגר אונ' ת"א במתמטיקה ומדעי המחשב. עם ניסיון רב בתוכנה ובהוראת מתמטיקה. והמון סבלנות!
