--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>לומדים מתמטיקה</title>
     <link rel="icon" type="image/png" href="pi.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Custom font for a clean look */
         body {
-            font-family: 'Roboto', sans-serif; /* Fallback to a generic sans-serif if Roboto isn't loaded */
             background-color: #f0f4f8; /* Light background color */
             min-height: 100vh; /* Ensure body takes full viewport height for consistent centering */
             display: flex;
@@ -25,7 +21,7 @@
 </head>
 <body class="p-4">
     <div class="bg-white p-8 rounded-xl shadow-lg max-w-2xl w-full">
-        <h1 class="text-2x1 font-extrabold text-gray-900 text-center mb-6 rounded-md p-2 bg-blue-100">
+        <h1 class="text-2x1 font-bold text-gray-900 text-center mb-6 rounded-md p-2 bg-blue-100">
             תגבור במתמטיקה ומדעי המחשב (4-5 יח"ל בלבד)
         </h1>
         <p dir="rtl" class="text-lg text-gray-700 text-right mb-8 leading-relaxed">
