--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body class="p-4">
     <div class="bg-white p-8 rounded-xl shadow-lg max-w-2xl w-full">
-        <h1 class="text-2x1 font-bold text-gray-900 text-center mb-6 rounded-md p-2 bg-blue-100">
+        <h1 class="text-2xl font-bold text-gray-900 text-center mb-6 rounded-md p-2 bg-blue-100">
             תגבור במתמטיקה ומדעי המחשב (4-5 יח"ל בלבד)
         </h1>
         <p dir="rtl" class="text-lg text-gray-700 text-right mb-8 leading-relaxed">
