--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body class="p-4">
     <div class="bg-white p-8 rounded-xl shadow-lg max-w-2xl w-full">
         <h1 class="text-2xl font-bold text-gray-900 text-center mb-6 rounded-md p-2 bg-blue-100">
-            תגבור במתמטיקה ומדעי המחשב (4-5 יח"ל)
+            תגבור במתמטיקה לכיתות ז'-י"ב, 3,4,5 יח"ל
         </h1>
         <p dir="rtl" class="text-lg text-gray-700 text-right mb-8 leading-relaxed">
           שמי דוד, בוגר אונ' ת"א במתמטיקה ומדעי המחשב. עם ניסיון רב בתוכנה ובהוראת מתמטיקה. והמון סבלנות!
@@ -74,3 +74,4 @@
     </div>
 </body>
 </html>
+
