--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             padding: 1rem; /* Add some padding around the content */
         }
     </style>
+    <meta property="og:title" content="תגבור במתמטיקה - דוד אופז" />
+    <meta property="og:description" content="תגבור במתמטיקה לכיתות ז' עד י"ב. 3-5 יח"ל" />
+    <meta property="og:image" content="https://www.yourwebsite.com/images/preview-image.jpg" />
+    <meta property="og:url" content="https://github.com/DavidUphaz/Contact" />
 </head>
 <body class="p-4">
     <div class="bg-white p-8 rounded-xl shadow-lg max-w-2xl w-full">
@@ -74,5 +78,6 @@
     </div>
 </body>
 </html>
+
 
 
