--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
     <meta property="og:title" content="תגבור במתמטיקה - דוד אופז" />
     <meta property="og:description" content="תגבור במתמטיקה לכיתות ז' עד י"ב. 3-5 יח"ל" />
-    <meta property="og:image" content="https://www.yourwebsite.com/images/preview-image.jpg" />
+    <meta property="og:image" content="https://github.com/DavidUphaz/Contact/blob/main/Me.jpg" />
     <meta property="og:url" content="https://github.com/DavidUphaz/Contact" />
 </head>
 <body class="p-4">
@@ -78,6 +78,7 @@
     </div>
 </body>
 </html>
+
 
 
 
