--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
     </style>
     <meta property="og:title" content="תגבור במתמטיקה - דוד אופז" />
-    <meta property="og:description" content="תגבור במתמטיקה לכיתות ז' עד י"ב. 3-5 יח"ל" />
+    <meta property="og:description" content="כיתות ז' - י"ב. 3-5 יח"ל" />
     <meta property="og:image" content="https://github.com/DavidUphaz/Contact/blob/main/Me.jpg" />
     <meta property="og:url" content="https://github.com/DavidUphaz/Contact" />
 </head>
@@ -78,6 +78,7 @@
     </div>
 </body>
 </html>
+
 
 
 
