--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     </style>
     <meta property="og:title" content="תגבור במתמטיקה - דוד אופז" />
     <meta property="og:description" content="כיתות ז' - י"ב. 3-5 יח"ל" />
-    <meta property="og:image" content="https://github.com/DavidUphaz/Contact/blob/main/Me.jpg" />
+    <meta property="og:image" content="https://github.com/DavidUphaz/Contact/blob/main/og.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://github.com/DavidUphaz/Contact" />
 </head>
 <body class="p-4">
@@ -78,6 +80,7 @@
     </div>
 </body>
 </html>
+
 
 
 
