--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
     </style>
     <meta property="og:title" content="תגבור במתמטיקה - דוד אופז" />
-    <meta property="og:description" content="3-5 יח&quot;ל" />
+    <meta property="og:description" content="כיתות ז עד י&quot;ב. 3,4,5 יח&quot;ל" />
     <meta property="og:image" content="https://github.com/DavidUphaz/Contact/blob/main/og1.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -80,6 +80,7 @@
     </div>
 </body>
 </html>
+
 
 
 
