--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </style>
     <meta property="og:title" content="תגבור במתמטיקה - דוד אופז" />
     <meta property="og:description" content="כיתות ז עד י&quot;ב. 3,4,5 יח&quot;ל" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/DavidUphaz/Contact/main/big-pi.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/DavidUphaz/Contact/main/big-pi.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://github.com/DavidUphaz/Contact" />
@@ -80,6 +80,7 @@
     </div>
 </body>
 </html>
+
 
 
 
