--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>לומדים מתמטיקה</title>
-    <link rel="icon" type="image/png" href="pi.png">
+    <link rel="icon" type="image/png" href="PI.jpeg">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Custom font for a clean look */
@@ -72,7 +72,7 @@
         </div>
 
         <div class="flex justify-center mb-8">
-            <img src="pi.png"
+            <img src="PI.jpeg"
                  alt="Placeholder centered image"
                  class="pt-10 h-auto border-10 border-transparent transform transition-transform duration-300 hover:scale-105 mx-auto w-8"
             >
@@ -80,6 +80,7 @@
     </div>
 </body>
 </html>
+
 
 
 
