--- a/index.html
+++ b/index.html
@@ -71,15 +71,18 @@
             </a>
         </div>
 
-        <div class="flex justify-center mb-8">
-            <img src="PI.jpeg"
-                 alt="Placeholder centered image"
-                 class="pt-10 h-auto border-10 border-transparent transform transition-transform duration-300 hover:scale-105 mx-auto w-40"
-            >
-        </div>
+        <script>
+            <div class="flex justify-center mb-8">
+                <img src="PI.jpeg"
+                     alt="Placeholder centered image"
+                     class="pt-10 h-auto border-10 border-transparent transform transition-transform duration-300 hover:scale-105 mx-auto w-40"
+                >
+            </div>
+        </script>
     </div>
 </body>
 </html>
+
 
 
 
