--- a/index.html
+++ b/index.html
@@ -72,16 +72,17 @@
         </div>
 
         <script>
-            <div class="flex justify-center mb-8">
+            /*<div class="flex justify-center mb-8">
                 <img src="PI.jpeg"
                      alt="Placeholder centered image"
                      class="pt-10 h-auto border-10 border-transparent transform transition-transform duration-300 hover:scale-105 mx-auto w-40"
                 >
-            </div>
+            </div>*/
         </script>
     </div>
 </body>
 </html>
+
 
 
 
