--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>לומדים מתמטיקה</title>
-    <link rel="icon" type="image/png" href="PI.jpeg">
+    <link rel="icon" type="image/png" href="pi.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Custom font for a clean look */
@@ -82,6 +82,7 @@
     </div>
 </body>
 </html>
+
 
 
 
