--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 </head>
 <body class="p-4">
     <div class="bg-white p-8 rounded-xl shadow-lg max-w-2xl w-full">
+        <div class="flex justify-center mb-8">
+            <img src="sqrt.jpg"
+                 alt="Placeholder centered image"
+                 class="h-auto  transform transition-transform duration-300 hover:scale-105 mx-auto w-2/3"
+            >
+        </div>
         <h1 class="text-2xl font-bold text-gray-900 text-center mb-6 rounded-md p-2 bg-blue-100">
             תגבור במתמטיקה לכיתות ז'-י"ב 3,4,5 יח"ל
         </h1>
@@ -82,6 +88,7 @@
     </div>
 </body>
 </html>
+
 
 
 
