--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body class="p-4">
     <div class="bg-white p-4 rounded-xl shadow-lg max-w-2xl w-full">
         <div class="flex justify-center mb-8">
-            <img src="sqrt-1.jpg"
+            <img src="sqrt.gif"
                  alt="Placeholder centered image"
                  class="h-auto  transform transition-transform duration-300 hover:scale-105 mx-auto w-2/3"
             >
@@ -88,6 +88,7 @@
     </div>
 </body>
 </html>
+
 
 
 
