--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta property="og:url" content="https://github.com/DavidUphaz/Contact" />
 </head>
 <body class="p-0">
-    <div class="bg-white p-4 rounded-xl shadow-lg max-w-2xl w-full">
+    <div class="bg-white p-4 shadow-lg max-w-2xl w-full">
         <div class="flex justify-center mb-8">
             <img src="sqrt.gif"
                  alt="Placeholder centered image"
@@ -88,6 +88,7 @@
     </div>
 </body>
 </html>
+
 
 
 
