--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Custom font for a clean look */
+        html {
+           min-height: 100vh;
+        }
         body {
             background-color: #f0f4f8; /* Light background color */
             min-height: 100vh; /* Ensure body takes full viewport height for consistent centering */
@@ -88,6 +91,7 @@
     </div>
 </body>
 </html>
+
 
 
 
