--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://github.com/DavidUphaz/Contact" />
 </head>
-<body class="p-0 w-full h-full">
-    <div class="bg-white p-4 shadow-lg max-w-2xl w-full h-full">
+<body class="p-0">
+    <div class="bg-white p-4 shadow-lg max-w-2xl w-full">
         <div class="flex justify-center mb-8">
             <img src="sqrt.gif"
                  alt="Placeholder centered image"
@@ -91,6 +91,7 @@
     </div>
 </body>
 </html>
+
 
 
 
