--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
            min-height: 100vh;
         }
         body {
-            background-color: #f0f4f8; /* Light background color */
+            backgxxxround-color: #f0f4f8; /* Light background color */
             min-height: 100vh; /* Ensure body takes full viewport height for consistent centering */
             display: flex;
             flex-direction: column;
@@ -91,6 +91,7 @@
     </div>
 </body>
 </html>
+
 
 
 
